testcrate/ui/forget-ok.stderr
error[E0277]: the trait bound `(): futures::__rt::IsResult` is not satisfied
 --> $DIR/forget-ok.rs:8:13
  |
8 | fn foo() -> impl Future<Item=(), Error=()> {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ async functions must return a `Result` or a typedef of `Result`
  |
  = help: the trait `futures::__rt::IsResult` is not implemented for `()`
  = note: required by `futures::__rt::gen_async_move`

error[E0277]: the trait bound `(): futures::__rt::IsResult` is not satisfied
  --> $DIR/forget-ok.rs:12:14
   |
12 | fn foos() -> impl Stream<Item=i32, Error=()> {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `()`
   = note: required by `futures::__rt::gen_async_move`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
